Docs: Finalize professional README and clean config template

--- a/hids.conf
+++ b/hids.conf
@@ -1,5 +1,5 @@
 # hids-toolkit Configuration File
-REPORT_EMAIL="awungjiavester@gmail.com" # Add your email here to get alerts
+REPORT_EMAIL="" # Add your email here to get alerts
 MONITORED_DIRS="/etc /bin /sbin /usr/bin /usr/sbin"
 BASELINE_FILE="db/file_hashes.baseline"
 PASSWD_BASELINE="db/passwd.baseline"
